@@ -25,5 +25,5 @@ fi
 #
 aclocal
 autoheader
-autoconf
 automake --add-missing --copy --gnu
+autoconf
