@@ -2,6 +2,11 @@
     * Making stable release 1.4.5.
 
 2018-06-19  Stipe Tolj  <stolj at kannel.org>
+    * bootstrap.sh: re-order GNU auto-tools calls, NLC.
+    * Makefile.in: provide phony 'am--refresh' to cope with bootstrapped source
+      packages on different enviornments.
+
+2018-06-19  Stipe Tolj  <stolj at kannel.org>
     * doc/*/[alligata|arch|userguide|wtls].xml: update DOCTYPE URL reference to
       new official URL location to fix 'make docs' processing.
     * configure.in: adding Debian 8 location for xml.dcl.
